# TraderRank

./: README.md
TraderRank-src/: .gitignore  CMakeLists.txt  TraderRank-src.sln
TraderRank-src/Client/: demos.md  index.html  package-lock.json  package.json
TraderRank-src/Client/src/: MarketHelpers.ts  main.ts  panel.html  window.ts
TraderRank-src/Client/src/Panels/: PanelAbstract.ts  PanelBook.ts  PanelCLOB.ts  PanelChart.ts
TraderRank-src/Server/: Server.cpp  Server.vcxproj  Server.vcxproj.filters  vcpkg.json
TraderRank-src/Server-python/: server.py
TraderRank-src/ServerBindable/: CMakeLists.txt  ServerBindable.cpp  ServerBindable.h
notebooks/: .gitignore
notebooks/CLOB/: CLOB_01_chatgpt.ipynb  CLOB_02_implementation.ipynb  CLOB_03_animation_optimized.ipynb  CLOB_04_parallel.py  CLOB_05_animation_func.ipynb  CLOB_06_deeper_book.ipynb  CLOB_07_BSM_fundamental.ipynb  CLOB_08_fundamental.ipynb  CLOB_09_generic_sde.ipynb  CLOB_09_gymnasium.ipynb  CLOB_09_server.py  CLOB_10_reactive_queues.ipynb  CLOB_11_directed_order_flow.ipynb  CLOB_1_chatgpt.ipynb  CLOB_2_implementation.ipynb  CLOB_3_animation.ipynb  CLOB_3_animation_optimized.ipynb  CLOB_4_parallel.py  CLOB_9_server.py  DSA.py  Simulation.py
notebooks/CLOB/Helpers/: Animation.py  BSM.py  CLOB.py  Classes.py  SimulationAbstract.py
notebooks/market/: market.ipynb
notebooks/models/: CIR_model.ipynb  black_scholes_effect_of_parameters.ipynb  black_scholes_multiple_paths.ipynb  black_scholes_volatility_drag.ipynb  black_scholes_volatility_option_price.ipynb  heston_model.ipynb  heston_model_analysis.ipynb  vasicek_model.ipynb
src/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/Client/: .prettierrc  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/Client/src/: App.tsx  main.tsx  store.ts
src/Client/src/components/: IntegerInput.tsx  OrderBookPanel.css  OrderBookPanel.tsx  Panel.tsx  PortfolioPanel.tsx  ResizableGridTable.tsx  SecurityInfoPanel.tsx
src/Client/webv1/: package-lock.json  package.json
src/Client/webv2/: index.html  package.json
src/Client/webv3/: .prettierrc  package-lock.json  package.json
src/PyServer/: custypes.py  server.py
src/PyServer/python_modules/: Server.pyd
src/Server/: CMakeLists.txt  ISimulation.hpp  Interfaces.hpp  Server.cpp  SingleThreadedTraderRank.hpp  TraderRank.hpp
src/Server/python_modules/: Server.pyi
src/notebooks/: .gitignore  _client.py  _server.py  _server2.py  chatgpt_example.ipynb  gymnasium_v01.ipynb  gymnasium_v02.ipynb  gymnasium_v03.ipynb  gymnasium_v04.ipynb  gymnasium_v05.ipynb  gymnasium_v1.ipynb  gymnasium_v2.ipynb  notebook.ipynb  pt.ipynb  pybind.ipynb  pybind.py  rl_agents_01.ipynb  sde_simulation_01.ipynb  sde_simulation_v02.ipynb  sde_simulation_v04.ipynb  sde_simulation_v05.00.ipynb  sde_simulation_v05.01.ipynb  sde_simulattion.ipynb  simulation_case_00_biotech.ipynb
src/notebooks/helpers/: Paths.py  SDEModels.py  __init__.py
src/notebooks/python_modules/: Server-2025-04-17.pyd  Server.pyd  Server.pyi
(+30 files in other folders)
